<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">780141175434027</string>
    <string name="app_name">Nexpa</string>
    <string name="hello_world">Nexpa</string>
    <string name="action_settings">Settings</string>
    <string name="hint_fullname">Fullname</string>
    <string name="hint_email">Email</string>
    <string name="hint_uname">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Username</string>
    <string name="hint_forgotpass">Email</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_sendemail">RESET PASSWORD</string>
    <string name="btn_register">REGISTER</string>
    <string name="strGender">Filter Gender</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_forgotpassword">Forgot Password?</string>
    <string name="btn_link_to_login">Already registred! Login Me Now.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">DEACTIVATE</string>
    <string name="name">Fullname</string>
    <string name="title_pull_to_zoom_list_view">ZoomListView</string>
    <string name="title_pull_to_zoom_scroll_view">ZoomScrollView</string>
    <string name="title_pull_to_zoom_recycler_view">ZoomRecyclerView</string>
    <string name="action_normal">Normal</string>
    <string name="action_parallax">Parallax</string>
    <string name="action_show_head">Show Head</string>
    <string name="action_hide_head">Hide Head</string>
    <string name="action_disable_zoom">Disable Zoom</string>
    <string name="action_enable_zoom">Enable Zoom</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_business">Business</string>
    <string name="radio_everyone">Eveyone</string>
    <string name="preferences">about me</string>
    <string name="sign_out">Sign out</string>
    <string name="sync">Sync</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="take_photo">Take photo</string>
    <string name="photo">Photo</string>
    <string name="choose_existing_photo">Choose existing photo</string>
    <string name="rad_lookingfor_networking">networking</string>
    <string name="rad_lookingfor_serious_relationship">serious relationship</string>
    <string name="rad_lookingfor_date">date</string>
    <string name="rad_lookingfor_friends">friends</string>
    <string name="rad_lookingfor">looking for</string>
    <string name="sexual_orientation">sexual orientation</string>
    <string name="rad_sexual_orientation_unspecified">unspecified</string>
    <string name="rad_sexual_orientation_straight">straight</string>
    <string name="rad_sexual_orientation_gay_lesbian">gay / lesbian</string>
    <string name="rad_sexual_orientation_bisexual">bisexual</string>
    <string name="rad_sexual_orientation_transgendered">transgendered</string>
    <string name="relationship">relationship</string>
    <string name="rad_relationship_unspecified">unspecified</string>
    <string name="rad_relationship_single">single</string>
    <string name="rad_relationship_in_a_rel">in a relationship</string>
    <string name="rad_relationship_married">married</string>
    <string name="rad_relationship_separated">separated</string>
    <string name="rad_relationship_widowed">widowed</string>
    <string name="rad_relationship_complicated">complicated</string>
    <string name="looking_for">show profiles with gender as</string>
    <string name="rad_looking_for_men">male</string>
    <string name="rad_looking_for_women">female</string>
    <string name="rad_looking_for_both">show both</string>
    <string name="orien_show">show only profiles with orientation as</string>
    <string name="cbx_orien_straight">straight</string>
    <string name="cbx_orien_gay">gay</string>
    <string name="cbx_orien_lesbian">lesbian</string>
    <string name="cbx_orien_bisexual">bisexual</string>
    <string name="cbx_orien_transgendered">transgendered</string>
    <string name="cbx_orien_unspecified">unspecified</string>
    <string name="settings">settings</string>
    <string name="chat_privacy">Individual chat privacy</string>
    <string name="rad_chat">Choose who can reach you on individual chat</string>
    <string name="rad_chat_everyone">everyone</string>
    <string name="rad_chat_friends">friends only</string>
    <string name="rad_chat_noone">no one</string>
    <string name="profile_privacy">Community chat privacy</string>
    <string name="profile_privacy_note">Choose whether to send/receive community chat or not</string>
    <string name="rad_chat_allow">receive</string>
    <string name="rad_chat_no">dont receive</string>
    <string name="updateStat">update status</string>
    <string name="stathint">What\'s up?</string>
    <string name="statupdate">update status</string>
    <string name="radio_unspecified">Other</string>
    <string name="btn_start_loc_chat">Broadcast</string>
    <string name="edt_broadcast">Enter Broadcast Message</string>
    <string name="strBroad">Broadcast</string>
    <string name="btnClose">Cancel</string>
    <string name="title_activity_chat_history">ChatHistoryActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile_header_distance">Distance Range</string>
    <string name="user_profile_ui_distance">Distance Settings</string>
    <string name="user_profile_distance_bar">Range to broadcast and catch users (in kilometers)</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="delete">delete</string>
    
     <!-- xmpp -->
     <string name="server">vps.gigapros.com</string>
    
    <!-- dialog msgs -->
    <string name="dialog_msg_sending_email">Sending email...</string>

    <!-- alerts -->
    <string name="msg_no_internet">Sorry your internet connection is not working, please enable it!</string>
     <string name="msg_request_to_reset_password_success">Please check your email to reset your Nexpa password.</string>

    <!-- hints -->
    <string name="short_description">Short description</string>
    <string name="profession">Profession</string>
    <string name="username">Username</string>
    <string name="url">URL</string>
    <string name="title_activity_others_broadcast">OthersBroadcastActivity</string>
    <string name="title_activity_buddy_request">BuddyRequestActivity</string>

</resources>
