<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="fill_parent" android:layout_height="match_parent"
android:orientation="vertical">

	<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:background="@color/toucan_green"
	android:padding="15dp">

		<TextView android:layout_width="200dp" android:layout_height="match_parent"
		android:text="@string/strGender" android:textSize="18dp"
		android:textAllCaps="true" android:textColor="@color/white"
		/>

		
        
		<View android:layout_width="0dp" android:layout_height="0dp"
		android:layout_weight="1" />

		<ProgressBar
		    android:id="@+id/pbBroadcast"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:minHeight="30dp"
		    android:minWidth="30dp"
		    android:visibility="invisible"
		     android:maxHeight="30dp"
		    android:maxWidth="30dp" >

        </ProgressBar>
        
		<Button android:id="@+id/dialogButtonOK"
		android:layout_width="30dp" android:layout_height="30dp"
		android:background="@drawable/btn_ok" />

	</LinearLayout>

	<LinearLayout android:id="@+id/looking_for"
	android:layout_width="fill_parent" android:orientation="vertical"
	android:layout_height="wrap_content" tools:ignore="HardcodedText"
	android:background="@color/flat_white" android:windowSoftInputMode="stateAlwaysVisible">
		
				
		 <LinearLayout android:id="@+id/linearLayout2"
    android:layout_width="fill_parent" android:orientation="vertical"
    android:layout_height="wrap_content"
    android:background="@color/white" android:paddingTop="10dp"
    android:paddingLeft="10dp" android:paddingRight="10dp">
        

        
        <RadioGroup android:id="@+id/radioSex" android:padding="10dp"
        android:background="@color/white_smoke"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
            
            
            
            <RadioButton android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:textColor="@color/old_black"
            android:textAllCaps="true" android:button="@drawable/flat_btn_radio"
            android:checked="true" />
            
            <RadioButton android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true" android:textColor="@color/old_black"
            android:button="@drawable/flat_btn_radio"
            android:text="@string/radio_female"
            /> </RadioGroup>
    
    </LinearLayout>

		<LinearLayout
		    android:id="@+id/buttons"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/flat_white"
		    android:gravity="center_horizontal"
		    android:orientation="horizontal"
		    android:padding="10dp"
		    tools:ignore="HardcodedText" >
		
		      

			
			

			
		</LinearLayout>
	</LinearLayout>

</LinearLayout>