<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/toucan_green"
        android:padding="15dp" >

        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/user_profile_ui_distance"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/dialogButtonOK1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/btn_ok" />
    </LinearLayout>

    <com.nirhart.parallaxscroll.views.ParallaxScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:inner_parallax_factor="2"
        app:parallax_factor="5"
        app:parallax_views_num="2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="5dp" >

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:paddingBottom="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="10dp"
                    tools:ignore="HardcodedText" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="1dp"
                        android:background="@color/white_smoke"
                        android:gravity="center"
                        android:padding="1dp"
                        android:text="@string/user_profile_header_distance"
                        android:textAllCaps="true"
                        android:textColor="@color/EDWARD"
                        android:textSize="18dp" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="130dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/white_smoke"
                        android:orientation="vertical"
                        android:padding="1dp" >

                        <com.appyvet.rangebar.RangeBar
                            xmlns:custom="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/rbDistance"
                            android:layout_width="match_parent"
                            android:layout_height="72dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="10dp"
                            android:inputType="number"
                            android:paddingTop="120dp"
                            custom:rangeBar="false"
                            custom:tickEnd="20"
                            custom:tickInterval="1"
                            custom:tickStart="1" />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="3dp"
                            android:background="@color/white_smoke"
                            android:gravity="center"
                            android:padding="3dp"
                            android:text="@string/user_profile_distance_bar"
                            android:textColor="@color/EDWARD"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/cbx_superuser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Premium user - unlimited broadcast range" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >
                
                <CheckBox
                            android:id="@+id/cbx_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Male" />
                
                 <CheckBox
                            android:id="@+id/cbx_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female" />
                 
                  <CheckBox
                            android:id="@+id/cbx_business"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Business" />

                

                <Button
                    android:id="@+id/dialogButtonOK"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="1dp"
                    android:background="@color/toucan_green"
                    android:text="Ok"
                    android:textAllCaps="true"
                    android:textColor="@color/flat_white" />

            </LinearLayout>
        </LinearLayout>
    </com.nirhart.parallaxscroll.views.ParallaxScrollView>

</LinearLayout>